Fix login page layout on mobile devices

--- a/css/login.css
+++ b/css/login.css
@@ -10,8 +10,7 @@
   font-family: 'Open Sans', arial;
   font-size: 38px;
   font-weight: 300;
-  height: 52px;
-  margin-bottom: 15px;
+  margin-bottom: 26px;
   text-align: center;
 }
 .btn-signin
